KNOWN BUGS:
* The code sometimes uses timeout_client where it should use a server timeout.
|
20060826a: Changes since 20060711a:
- Bugfix: handle 400...499 codes in reply to ARTICLE command properly.
  Reported and fix tested by Martin Brunzel.
- Bugfix: if a fatal fetch error occurs, proceed to next server.
- Update: the leafnode.spec.in file was updated to fix rpmbuild issues
  and instruct the packager how the %doc-umentation can be relocated.
  Reported by Kevin Bulgrien.

20060711a: Changes since 20060706a:
- Bugfix: do not leak memory if global configuration parameters that
  read strings are specified more than once. Found by "Stroller".
- Bugfix: do not leak memory if reading new newsgroups fails or if the
  list of newsgroups ends prematurely. Found by "Stroller".

20060706a: Changes since 20060608b:
- Security Bugfix: Fix off-by-one error in getabufferedline().
- Bugfix: On corrupted active files without line breaks, avoid reading
  past the end of the file.
- Bugfix: Do not report "lock file exists" if locking failed for other
  reasons than a pre-existing lock. Found by Troy Piggins.

20060608b: Changes since 20060608a:
- Revert Bugfix from 20060608a for the nonce, since some parts of
  leafnode (lock file generation for instance) rely on the actual FQDN,
  causing more subtle failures (reported by Troy Piggins).
  Let's better fail up front.
- Documentation: Adapt the README-FQDN from leafnode 1, and convert the
  source to LaTeX to use the same workflow as for the FAQ.
  Comments, Questions, Amendmends are solicited, send them to the
  leafnode-list or to Matthias Andree.

20060608a: Changes since 20060428a:
- Bugfix: Make hostname=foo.example.org override broken local DNS
  configuration. Reported by Troy Piggins. [Reverted on 20060609.]
- Documentation: texpire -C now shows angle brackets and quotes around
  the message-ID.

20060428a: Changes since 20060424a:
- Forward port fqdn validation list from upcoming leafnode 1.11.6.
